# localstack-axum-example

./: Cargo.toml  README.md
invoke_events/: README.md  health_check.json  hello_get.json  hello_post.json  ping.json  root.json  users_get.json  users_get_by_id.json  users_post.json
src/: main.rs
src/endpoints/: hello.rs  mod.rs  ping.rs  users.rs
