[package]
name = "basic-axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
lambda_http = "0.15"
lambda_runtime = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
